src/features2d.h

    typedef cv::Ptr<cv::KAZE> *KAZE;
    typedef cv::Ptr<cv::MSER> *MSER;
    typedef cv::Ptr<cv::ORB> *ORB;
    typedef cv::Ptr<cv::SimpleBlobDetector> *SimpleBlobDetector;
    typedef cv::Ptr<cv::SIFT> *SIFT;
typedef void *KAZE;
typedef void *MSER;
typedef void *ORB;
typedef void *SimpleBlobDetector;
typedef void *SIFT;
    KAZE KAZE_Create();
    void KAZE_Close(KAZE a);
    struct KeyPoints KAZE_Detect(KAZE a, Mat src);
    struct KeyPoints KAZE_DetectAndCompute(KAZE a, Mat src, Mat mask, Mat desc);
    MSER MSER_Create();
    void MSER_Close(MSER a);
    struct KeyPoints MSER_Detect(MSER a, Mat src);
    ORB ORB_Create();
    ORB ORB_CreateWithParams(int nfeatures, float scaleFactor, int nlevels, int edgeThreshold, int firstLevel, int WTA_K, int scoreType, int patchSize, int fastThreshold);
    void ORB_Close(ORB o);
    struct KeyPoints ORB_Detect(ORB o, Mat src);
    struct KeyPoints ORB_DetectAndCompute(ORB o, Mat src, Mat mask, Mat desc);
    SimpleBlobDetector SimpleBlobDetector_Create();
    SimpleBlobDetector SimpleBlobDetector_Create_WithParams(SimpleBlobDetectorParams params);
    void SimpleBlobDetector_Close(SimpleBlobDetector b);
    struct KeyPoints SimpleBlobDetector_Detect(SimpleBlobDetector b, Mat src);
    SimpleBlobDetectorParams SimpleBlobDetectorParams_Create();
    SIFT SIFT_Create();
    void SIFT_Close(SIFT f);
    struct KeyPoints SIFT_Detect(SIFT f, Mat src);
    struct KeyPoints SIFT_DetectAndCompute(SIFT f, Mat src, Mat mask, Mat desc);