lib/src/g/features2d.g.dart


@ffi.Native<ffi.Void Function(KAZEPtr)>()
external void KAZE_Close(
  KAZEPtr a,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(KAZEPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> KAZE_Close_Async(
  KAZEPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<KAZE>)>()
external ffi.Pointer<CvStatus> KAZE_Create(
  ffi.Pointer<KAZE> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> KAZE_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(KAZE, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> KAZE_Detect(
  KAZE a,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        KAZE, Mat, Mat, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> KAZE_DetectAndCompute(
  KAZE a,
  Mat src,
  Mat mask,
  Mat desc,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(KAZE, Mat, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> KAZE_DetectAndCompute_Async(
  KAZE self,
  Mat src,
  Mat mask,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(KAZE, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> KAZE_Detect_Async(
  KAZE self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(MSERPtr)>()
external void MSER_Close(
  MSERPtr a,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(MSERPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> MSER_Close_Async(
  MSERPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<MSER>)>()
external ffi.Pointer<CvStatus> MSER_Create(
  ffi.Pointer<MSER> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> MSER_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(MSER, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> MSER_Detect(
  MSER a,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(MSER, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> MSER_Detect_Async(
  MSER self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(ORBPtr)>()
external void ORB_Close(
  ORBPtr self,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ORBPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> ORB_Close_Async(
  ORBPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<ORB>)>()
external ffi.Pointer<CvStatus> ORB_Create(
  ffi.Pointer<ORB> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Float, ffi.Int, ffi.Int,
        ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ORB>)>()
external ffi.Pointer<CvStatus> ORB_CreateWithParams(
  int nfeatures,
  double scaleFactor,
  int nlevels,
  int edgeThreshold,
  int firstLevel,
  int WTA_K,
  int scoreType,
  int patchSize,
  int fastThreshold,
  ffi.Pointer<ORB> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Float, ffi.Int, ffi.Int,
        ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> ORB_CreateWithParams_Async(
  int nfeatures,
  double scaleFactor,
  int nlevels,
  int edgeThreshold,
  int firstLevel,
  int WTA_K,
  int scoreType,
  int patchSize,
  int fastThreshold,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> ORB_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ORB, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> ORB_Detect(
  ORB self,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ORB, Mat, Mat, ffi.Pointer<Mat>, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> ORB_DetectAndCompute(
  ORB self,
  Mat src,
  Mat mask,
  ffi.Pointer<Mat> desc,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ORB, Mat, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> ORB_DetectAndCompute_Async(
  ORB self,
  Mat src,
  Mat mask,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ORB, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> ORB_Detect_Async(
  ORB self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Void Function(SIFTPtr)>()
external void SIFT_Close(
  SIFTPtr f,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(SIFTPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> SIFT_Close_Async(
  SIFTPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<SIFT>)>()
external ffi.Pointer<CvStatus> SIFT_Create(
  ffi.Pointer<SIFT> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> SIFT_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(SIFT, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> SIFT_Detect(
  SIFT f,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        SIFT, Mat, Mat, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> SIFT_DetectAndCompute(
  SIFT f,
  Mat src,
  Mat mask,
  Mat desc,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(SIFT, Mat, Mat, imp1.CvCallback_2)>()
external ffi.Pointer<CvStatus> SIFT_DetectAndCompute_Async(
  SIFT self,
  Mat src,
  Mat mask,
  imp1.CvCallback_2 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(SIFT, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> SIFT_Detect_Async(
  SIFT self,
  Mat src,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<SimpleBlobDetectorParams>)>()
external ffi.Pointer<CvStatus> SimpleBlobDetectorParams_Create(
  ffi.Pointer<SimpleBlobDetectorParams> rval,
);

@ffi.Native<ffi.Void Function(SimpleBlobDetectorPtr)>()
external void SimpleBlobDetector_Close(
  SimpleBlobDetectorPtr b,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(SimpleBlobDetectorPtr, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Close_Async(
  SimpleBlobDetectorPtr self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<SimpleBlobDetector>)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Create(
  ffi.Pointer<SimpleBlobDetector> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Create_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        SimpleBlobDetectorParams, ffi.Pointer<SimpleBlobDetector>)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Create_WithParams(
  SimpleBlobDetectorParams params,
  ffi.Pointer<SimpleBlobDetector> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        SimpleBlobDetectorParams, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Create_WithParams_Async(
  SimpleBlobDetectorParams params,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        SimpleBlobDetector, Mat, ffi.Pointer<VecKeyPoint>)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Detect(
  SimpleBlobDetector b,
  Mat src,
  ffi.Pointer<VecKeyPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        SimpleBlobDetector, Mat, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> SimpleBlobDetector_Detect_Async(
  SimpleBlobDetector self,
  Mat src,
  imp1.CvCallback_1 callback,
);

const addresses = _SymbolAddresses();
